inou/prp/tests/errors/adv_not_on_int.prp
/*
:name: adv_not_on_int
:type: error
:error: (not|boolean)
*/
// `not`/`!` are boolean-only; applying to an integer is a compile error.
const n1:u3 = 1
const r = not n1
